--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,6 @@
 <html lang="es">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Divulgando Ciencia | La ciencia abierta</title>
@@ -18,11 +17,8 @@
 						divulgandociencia.com
 					</h1>
 					<h3 class="text-base sm:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl min-[2250px]:text-4xl mb-16 font-normal px-32">
-						Estamos actualizando nuestra web de divulgación científica abierta que estará disponible pronto. En este momento, no se puede acceder, ya que estamos finalizando el desarrollo. Prepárense para explorar el mundo de la ciencia con nosotros.
+						Estamos actualizando la web a Astro. ¡Estaremos encantados de recibirte pronto!
 					</h3>
-					<h2 class="text-2xl sm:text-4xl lg:text-6xl xl:text-7xl 2xl:text-8xl min-[2250px]:text-[9.5rem] font-medium mb-8">
-						¡Gracias por su paciencia!
-					</h2>
 				</header>
 			</section>
 	
