--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@
 					<h1 class="text-2xl sm:text-5xl lg:text-7xl xl:text-8xl 2xl:text-9xl min-[2250px]:text-[10rem] font-semibold mb-8">
 						divulgandociencia.com
 					</h1>
-					<h3 class="text-sm sm:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl min-[2250px]:text-4xl mb-16 font-normal px-2">
+					<h3 class="w-full text-center text-sm sm:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl min-[2250px]:text-4xl mb-16 font-normal px-2">
 						Estamos actualizando la web a Astro. ¡Estaremos encantados de recibirte pronto!
 					</h3>
 				</header>
