--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,10 +13,10 @@
 			<section class="m-auto w-full place-content-center px-8">
 				<!--Texto (título y subtítulo)-->
 				<header class="z-30 relative">
-					<h1 class="text-2xl sm:text-5xl lg:text-7xl xl:text-8xl 2xl:text-9xl min-[2250px]:text-[10rem] font-semibold mb-8">
+					<h1 class="font-generalsans-semibold text-2xl sm:text-5xl lg:text-7xl xl:text-8xl 2xl:text-9xl min-[2250px]:text-[10rem] mb-8">
 						divulgandociencia.com
 					</h1>
-					<h3 class="w-full text-center text-sm sm:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl min-[2250px]:text-4xl mb-16 font-normal px-2">
+					<h3 class="font-generalsans w-full text-center text-sm sm:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl min-[2250px]:text-4xl mb-16 font-normal px-2">
 						Estamos actualizando la web a Astro. ¡Estaremos encantados de recibirte pronto!
 					</h3>
 				</header>
@@ -29,3 +29,20 @@
 		</section>
 	</body>
 </html>
+
+<style is:global>
+	@font-face {
+	  font-family: 'General Sans Semibold';
+	  src: url('/fonts/GeneralSans-Semibold.woff2') format('woff2');
+	  font-weight: normal;
+	  font-style: normal;
+	  font-display: swap;
+	}
+	@font-face {
+	  font-family: 'General Sans Regular';
+	  src: url('/fonts/GeneralSans-Regular.woff2') format('woff2');
+	  font-weight: normal;
+	  font-style: normal;
+	  font-display: swap;
+	}
+</style> 
