--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,12 +13,51 @@
 			<section class="m-auto w-full place-content-center px-8">
 				<!--Texto (título y subtítulo)-->
 				<header class="z-30 relative">
-					<h1 class="font-generalsans-semibold text-2xl sm:text-5xl lg:text-7xl xl:text-8xl 2xl:text-9xl min-[2250px]:text-[10rem] mb-8">
+					<h1 class="font-generalsans-semibold text-2xl sm:text-5xl lg:text-7xl xl:text-8xl 2xl:text-9xl min-[2250px]:text-[10rem] mb-12">
 						divulgandociencia.com
 					</h1>
-					<h3 class="font-generalsans w-full text-center text-sm sm:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl min-[2250px]:text-4xl mb-16 font-normal px-2">
-						Estamos actualizando la web a Astro. ¡Estaremos encantados de recibirte pronto!
-					</h3>
+					<!-- Display the countdown timer in an element -->
+					<div>
+						<span class="mr-4 px-3 py-4 bg-faded-white font-generalsans-semibold rounded text-xl" id="days">
+						</span>
+						<span class="mr-4 px-3 py-4 bg-faded-white font-generalsans-semibold rounded text-xl" id="hours">
+						</span>
+						<span class="mr-4 px-3 py-4 bg-faded-white font-generalsans-semibold rounded text-xl" id="min">
+						</span>
+						<span class="w-10 px-3 py-4 bg-faded-white font-generalsans-semibold rounded text-xl" id="sec">
+						</span>
+					</div>
+
+					<script>
+					// Set the date we're counting down to
+					var countDownDate = new Date("Sep 26, 2023 21:00:00").getTime();
+
+					// Update the count down every 1 second
+					var x = setInterval(function() {
+
+					// Get today's date and time
+					var now = new Date().getTime();
+
+					// Find the distance between now and the count down date
+					var distance = countDownDate - now;
+
+					// Time calculations for days, hours, minutes and seconds
+					var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+					var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+					var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+					var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+					document.getElementById("days").innerHTML = days + " días"
+					document.getElementById("hours").innerHTML = hours + " horas"
+					document.getElementById("min").innerHTML = minutes + " minutos"
+					document.getElementById("sec").innerHTML = seconds + " segundos"
+
+					// If the count down is finished, write some text
+					if (distance < 0) {
+						clearInterval(x);
+					}
+					}, 1000);
+					</script>
 				</header>
 			</section>
 	
