--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@
 					var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
 					var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-					document.getElementById("time").innerHTML = days + " días \n" + hours + " horas \n" + minutes + " minutos \n" + seconds + " segundos \n"
+					document.getElementById("time").innerHTML = days + "D \n" + hours + "H \n" + minutes + "M \n" + seconds + "S \n"
 					// document.getElementById("hours").innerHTML = hours + " horas"
 					// document.getElementById("min").innerHTML = minutes + " minutos"
 					// document.getElementById("sec").innerHTML = seconds + " segundos"
