--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@
 					<!-- Display the countdown timer in an element -->
 					<div>
 						<span class="mr-4 px-3 py-4 bg-faded-white font-generalsans-semibold rounded text-xl" id="time">
-							<span class="hidden" id="popupSpan">26/9/23 21:00:00</span>
+							<span class="hidden" id="popupSpan" >26/9/23 21:00:00</span>
 						</span>
 					</div>
 
@@ -98,5 +98,10 @@
 	  font-weight: normal;
 	  font-style: normal;
 	  font-display: swap;
+	}
+	.hidden {
+		bottom: -30px;
+  		left: 50%;
+  		transform: translateX(-50%);
 	}
 </style> 
